logout button mobile fixed

--- a/components/MainLayout/styles/Header.module.scss
+++ b/components/MainLayout/styles/Header.module.scss
@@ -91,5 +91,6 @@
 
 .logout_button {
   background: url('../../../assets/logout_icon.svg') center no-repeat;
-
+  background-size: cover;
+  border: none;
 }
